--- a/CitiTradeWeb/WebContent/css/offcanvas.css
+++ b/CitiTradeWeb/WebContent/css/offcanvas.css
@@ -13,6 +13,11 @@ footer {
   padding: 30px 0;
 }
 
+h1{
+	color: blue;
+	text-align: center;
+}
+
 /*
  * Off Canvas
  * --------------------------------------------------
@@ -56,4 +61,28 @@ footer {
     top: 0;
     width: 50%; /* 6 columns */
   }
+  
+.table {margin:0px;padding:0px;
+	width:100%;
+	box-shadow: 10px 10px 5px #888888;
+	border: 0px;
+	
+	-moz-border-radius-bottomleft:25px;
+	-webkit-border-bottom-left-radius:25px;
+	border-bottom-left-radius:25px;
+	
+	-moz-border-radius-bottomright:25px;
+	-webkit-border-bottom-right-radius:25px;
+	border-bottom-right-radius:25px;
+	
+	-moz-border-radius-topright:25px;
+	-webkit-border-top-right-radius:25px;
+	border-top-right-radius:25px;
+	
+	-moz-border-radius-topleft:25px;
+	-webkit-border-top-left-radius:25px;
+	border-top-left-radius:25px; }
+.tr { color-background: #999999; }
+
+
 }
